# android-emulator

./: .gitignore  COPYING.ANDROID_NEWPOPUPMENU  COPYING.VIEWPAGEINDICATOR  README.md  build.gradle  local.properties  settings.gradle  sign.properties
core/: build.gradle
core/jni/: Application.mk  Bridge.cpp  Bridge.h  Emulator.cpp  Emulator.h  Utils.cpp  Utils.h  defsettings.h
core/src/main/: AndroidManifest.xml
core/src/main/res/anim/: arow_right_anim.xml  progress_rotate_anim2.xml
core/src/main/res/drawable/: button_a_selector.xml  button_a_turbo_selector.xml  button_ab_selector.xml  button_b_turbo_selector.xml  button_down_selector.xml  button_left_selector.xml  button_port_selector.xml  button_right_selector.xml  button_top_panel_selector.xml  dialog_button_focus.xml  empty_boundary_shape.xml  game_menu_button_focus.xml  list_selector_focused.xml  r_button_a_selector.xml  r_button_b_selector.xml  r_button_b_turbo_selector.xml  r_button_center_selector.xml  r_button_down_selector.xml  r_button_fast_forward_selector.xml  r_button_left_selector.xml  r_button_menu_selector.xml  r_button_search_selector.xml  r_button_select_selector.xml  r_button_start_selector.xml  r_button_up_selector.xml  row_gallery_item_progress.xml  row_slot_item_bck_selector.xml  slot_bck_shape.xml
core/src/main/res/layout-land/: activity_slot_selection.xml
filepicker/: README  build.gradle
filepicker/src/main/: AndroidManifest.xml
gbc/: build.gradle
gbc/src/lite/: AndroidManifest.xml
gbc/src/main/: AndroidManifest.xml
gbc/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  Gbc.cpp  settings.h
gbc/src/main/jni/common/: adaptivesleep.cpp  adaptivesleep.h  array.h  rateest.cpp  rateest.h  ringbuffer.h  skipsched.cpp  skipsched.h  usec.h
gbc/src/main/jni/common/resample/: resampler.h  resamplerinfo.h
gbc/src/main/jni/common/resample/src/: blackmansinc.h  chainresampler.cpp  chainresampler.h  cic2.h  cic3.h  cic4.h  convoluter.h  hammingsinc.h  i0.cpp  i0.h  kaiser50sinc.h  kaiser70sinc.h  linint.h  makesinckernel.cpp  makesinckernel.h  rectsinc.h  resamplerinfo.cpp  rshift16_round.h  subresampler.h  u48div.cpp  u48div.h  upsampler.h
gbc/src/main/jni/common/videolink/: rgb32conv.cpp  rgb32conv.h  vfilterinfo.cpp  vfilterinfo.h  videolink.h
gbc/src/main/jni/common/videolink/vfilters/: catrom2x.cpp  catrom2x.h  catrom3x.cpp  catrom3x.h  kreed2xsai.cpp  kreed2xsai.h  maxsthq2x.cpp  maxsthq2x.h  maxsthq3x.cpp  maxsthq3x.h
gbc/src/main/jni/libgambatte/: SConstruct
gbc/src/main/jni/libgambatte/include/: gambatte.h  inputgetter.h
gbc/src/main/jni/libgambatte/src/: bitmap_font.cpp  bitmap_font.h  cpu.cpp  cpu.h  gambatte.cpp  gbmemory.h  initstate.cpp  interrupter.cpp  interrupter.h  interruptrequester.cpp  interruptrequester.h  memory.cpp  minkeeper.h  osd_element.h  savestate.h  sound.cpp  sound.h  state_osd_elements.cpp  state_osd_elements.h  statesaver.cpp  statesaver.h  tima.cpp  tima.h  video.cpp  video.h
gbc/src/main/jni/libgambatte/src/file/: file.cpp  file.h
gbc/src/main/jni/libgambatte/src/file/unzip/: unzip.c
gbc/src/main/jni/libgambatte/src/mem/: cartridge.cpp  cartridge.h  memptrs.cpp  memptrs.h  rtc.cpp  rtc.h
gbc/src/main/jni/libgambatte/src/sound/: channel1.cpp  channel1.h  channel2.cpp  channel2.h  channel3.cpp  channel3.h  channel4.cpp  channel4.h  duty_unit.cpp  duty_unit.h  envelope_unit.cpp  envelope_unit.h  length_counter.cpp  length_counter.h
gbc/src/main/jni/libgambatte/src/video/: ly_counter.cpp  ly_counter.h  lyc_irq.cpp  lyc_irq.h  next_m0_time.cpp  next_m0_time.h  ppu.cpp  ppu.h  sprite_mapper.cpp  sprite_mapper.h
gg/: build.gradle
gg/src/lite/: AndroidManifest.xml
gg/src/main/: AndroidManifest.xml
gg/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  Sms.cpp  settings.h
gg/src/main/jni/sms_plus/: loadrom.c  osd.h  osd_cpu.h  sn76489.c  state.c  state.h  stdioext.h  system.c  types.h  z80.c  z80.h
gradle/wrapper/: gradle-wrapper.properties
nes/: build.gradle
nes/src/lite/: AndroidManifest.xml
nes/src/main/: AndroidManifest.xml
nes/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  Nes.cpp  settings.h
nes/src/main/jni/fceux/: SConscript  cart.cpp  cart.h  cheat.cpp  driver.h  fceu.cpp  fceu.h  fceulua.h  fds.cpp  fds.h  file.cpp  filter.cpp  filter.h  ines-bad.h  ppu.cpp  sound.cpp  state.cpp  video.cpp
nes/src/main/jni/fceux/boards/: 112.cpp  117.cpp  164.cpp  206.cpp  88.cpp  90.cpp  SConscript  datalatch.cpp  emu2413.c  emu2413.h  fk23c.cpp  malee.cpp  mapinc.h  n106.cpp  sachen.cpp  super24.cpp  supervision.cpp  tengen.cpp
nes/src/main/jni/fceux/drivers/common/: SConscript  configSys.cpp  configSys.h  nes_ntsc.c  nes_ntsc.h  nes_ntsc_config.h  nes_ntsc_impl.h
nes/src/main/jni/fceux/drivers/sdl/: SConscript  config.cpp  config.h  gui.cpp  gui.h  icon.xpm  input.cpp  input.h  main.h  sdl-joystick.cpp  sdl-opengl.cpp  sdl-opengl.h  sdl-sound.cpp  sdl-throttle.cpp  sdl-video.cpp  sdl-video.h  sdl.cpp  unix-netplay.cpp
nes/src/main/jni/fceux/drivers/videolog/: SConscript  nesvideos-piece.cpp  nesvideos-piece.h  quantize.h  rgbtorgb.cpp  rgbtorgb.h  simd.h
nes/src/main/jni/fceux/drivers/win/: SConscript  afxres.h  cdlogger.cpp  fceu_x86.manifest  help.cpp  main.h  palette.cpp  ram_search.h  ramwatch.h  replay.cpp  video.h  window.h
nes/src/main/jni/fceux/drivers/win/directx/: SConscript
nes/src/main/jni/fceux/drivers/win/lua/include/: lua.h  luaconf.h
nes/src/main/jni/fceux/drivers/win/zlib/: SConscript  adler32.c  changelog  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  makefile  trees.c  uncompr.c  unzip.c  zconf.h  zutil.c  zutil.h
nes/src/main/jni/fceux/fir/: SConscript
nes/src/main/jni/fceux/input/: SConscript  suborkb.cpp  suborkb.h
nes/src/main/jni/fceux/lua/: SConscript
nes/src/main/jni/fceux/palettes/: SConscript
nes/src/main/jni/fceux/utils/: SConscript  memory.cpp
nes/src/main/jni/fceux/~attic/pc/: dos-joystick.c  dos-joystick.h  dos.c  dos.h  vgatweak.c
other_libs/FilePickerLibrary/res/layout/: file_picker_empty_view.xml  file_picker_list_item.xml
(+354 files in other folders)
